tests/characterization/snapshots/metadata_get__duplicate_key.snap
---
source: tests/characterization/metadata.rs
expression: output
---
exit: 0
--- stdout ---
engine:
  v2.0.0
* v1.2.3
--- stderr ---
--- end ---
